--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "lint": "./node_modules/.bin/eslint ./src/*"
   },
   "dependencies": {
+    "currency-symbol-map": "^4.0.4",
+    "moment": "^2.22.0",
     "react": "16.3.1",
     "react-native": "0.55.2",
     "react-navigation": "^1.5.11"
