--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "moment": "^2.22.0",
     "react": "16.3.1",
     "react-native": "0.55.2",
-    "react-navigation": "^1.5.11"
+    "react-navigation": "^1.5.11",
+    "react-redux": "^5.0.7",
+    "redux": "^3.7.2"
   },
   "devDependencies": {
     "babel-eslint": "^8.2.2",
