--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "eslint-plugin-react": "^7.7.0",
     "eslint-plugin-react-native": "^3.2.1",
     "eslint-plugin-standard": "^3.0.1",
-    "flow-bin": "^0.69.0",
+    "flow-bin": "0.69.0",
     "jest": "22.4.3",
     "react-test-renderer": "16.3.1"
   },
